--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Henry Hamilton">
 
     <nav>
-      <a  href="index_project1.html">html</a>
+      <a  href="index.html">html</a>
     </nav>
 
 
