--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Henry Hamilton">
-    <title> cs 290 - project 1</title>
+    <title> index.html</title>
   </head>
   <nav>
     <a  href="blog.html">blog</a>
