--- a/blog.html
+++ b/blog.html
@@ -23,5 +23,33 @@
     <h1> What resources have I used? </h1>
     <p> I have used all of them, I just need to master them.</p>
 
+    <h1> Blog Entry 2 -- 10/26/20 </h1>
+
+    <p> This was fun. I had trouble getting things exactly the same but this was a nice warm up into attributes, and styling. </p>
+    <h4> What was challenging? What problems did I face? </h4>
+    <p> My biggest thing is that if I can understand what is going on behind the scenes, everything else is syntax right? Syntax is challenging but can be learned in a few days. So for me, I have the hardest time seeing what the webpage is. There are these invisible lines drawing the page.
+      . So I thought to pull up edge and use the inspect feature. This tool saved my life. It will show you all the invisible lines, and it will even tell you how to edit things by displaying the name and class name. </p>
+      <p> This made development so much easier for a beginner like me. Makes all that under the hood information much more approachable. Because lets be honest, most of CS is not.</p>
+
+      <h4> What did you learn from the assignment? Were there any special insights you had? What did you find that you already knew? </h4>
+      <p> I learned a lot of syntax. I also learned very quickly that when you go editing lots of things, you get lost in the weeds super fast. One thing that I alredy knew that was reinforced was that I know very little. Looking at code snippets on the web would usually confuse me, so I tried to stick to W3 schools.
+        Just the basics, then build off that, so I understand the idea. Also, LABEL CORRECTLY. Having that .html labeled correctly allowed me to easily look up what I was doing wrong in the inspect tool. Instantly having that call and response that beginners really need.</p>
+      <h4> What kinds of resources were helpful for completing the assignment? Specific websites? Lectures? The class Piazza forum? The TAs? How did you use each of these resources? </h4>
+
+      <p> Lectures yes, this whole assignment was from lecture. The inspecting tool on Chrome and Edge. W3 Schools. I never copy paste anything. I always have a blank html doc and css doc waiting to be filled with random stuff, then I test what I see on the web. I try to break it. Then fix it. This goes on and on, until I see what is going on. </p>
+       <p> Its all about the big picture. I mentioned above how I use the inspect tool, it really is a saving grace. You can see how its all working together. Development without that tool would have been much much harder. </p>
+
+       <h4> What are one or two things you had to Google to complete the assignment? </h4>
+       <p> I googled quite a bit, but I stuck to googling things like this. The attribute I was having a hard time with, followed by the element I was trying to use it with. </p>
+       <p> This way I could quickly see input arguments being correctly used with the exact element type I was trying to use it with. </p>
+
+       <p> End of Blog 2 entry </p>
+       
+
+
+
+
+
+
   </body>
   </html>
